--- a/views/transferorder/transferorderscripts.ejs
+++ b/views/transferorder/transferorderscripts.ejs
@@ -192,37 +192,37 @@
         }
     
         function LoadTable() {
-            // $(".progress").hide();
-            // $(".progress").slideDown();
+            $(".progress").hide();
+            $(".progress").slideDown();
 
-            // $.ajax({
-            //     url: '/transferorder/load',
-            //     method: 'GET',
-            //     dataType: 'json',
-            //     xhrFields: {
-            //         onprogress: function (e) {
-            //             if (e.lengthComputable) {
-            //                 var percentComplete = (e.loaded / e.total) * 100;
-            //                 $(".progress-bar").css("width", percentComplete + "%");
-            //             }
-            //         }
-            //     },
-            //     success: function (data) {
-            //         setTimeout(function () {
-            //             $(".progress").slideUp(function () {
-            //                 if (data.msg === 'success') {
-            //                     console.log(data.data);
-            //                     populateTransferOrderTable(data.data);
-            //                 } else {
-            //                     console.error(data.msg);
-            //                 }
-            //             });
-            //         }, 1000);
-            //     },
-            //     error: function (error) {
-            //         console.error(error);
-            //     }
-            // });
+            $.ajax({
+                url: '/transferorder/load',
+                method: 'GET',
+                dataType: 'json',
+                xhrFields: {
+                    onprogress: function (e) {
+                        if (e.lengthComputable) {
+                            var percentComplete = (e.loaded / e.total) * 100;
+                            $(".progress-bar").css("width", percentComplete + "%");
+                        }
+                    }
+                },
+                success: function (data) {
+                    setTimeout(function () {
+                        $(".progress").slideUp(function () {
+                            if (data.msg === 'success') {
+                                console.log(data.data);
+                                populateTransferOrderTable(data.data);
+                            } else {
+                                console.error(data.msg);
+                            }
+                        });
+                    }, 1000);
+                },
+                error: function (error) {
+                    console.error(error);
+                }
+            });
         }
 
         //#region Add Item
