[updated selection of product ui]-[transferorder]-[minor adjustments to purchaseorder]-[/purchaseorder/transferorder]

--- a/views/transferorder/transferorder.ejs
+++ b/views/transferorder/transferorder.ejs
@@ -54,13 +54,12 @@
                 </div>
                 <div class="card-body extend">
                     <div class="table-responsive table-size-package border">
-                        <table class="table custom-mobile-table" id="purchaseorder-datatable" width="100%"
+                        <table class="table custom-mobile-table" id="transferorder" width="100%"
                             cellspacing="10">
                             <thead class="table-header">
                                 <tr>
                                     <th class="col-3">Product</th>
-                                    <th class="col-2">Unit/s</th>
-                                    <th class="col-3">Cost</th>
+                                    <th class="col-2">ID</th>
                                     <th class="col-2">Quantity</th>
                                     <th class="col-1"></th>
                                 </tr>
@@ -79,8 +78,7 @@
                                             <div class="custom-dropdown cdw-tableoption" id="productDropdown"></div>
                                         </div>
                                     </td>
-                                    <td data-label="Units" class="custom-mobile-align units"></td>
-                                    <td data-label="Cost" class="custom-mobile-align cost"></td>
+                                    <td data-label="Units" class="custom-mobile-align product-id"></td>
                                     <td data-label="Quantity" class="custom-mobile-align">
                                         <div class="row justify-content-center">
                                             <input id="quantity" name="quantity" type="number" class="form-control"
