--- a/views/productioninventory/productioninventory.ejs
+++ b/views/productioninventory/productioninventory.ejs
@@ -37,7 +37,7 @@
             </div>
         </div>
         <div class="card-body">
-            <div class="table-responsive scroll-cardbody-size-710">
+            <div class="table-responsive scroll-cardbody-size-710 border">
                 <table class="table table-bordered custom-mobile-table" id="productioninventory-datatable" width="100%" cellspacing="10">
                     <thead class="table-header">
                         <tr>
